--- a/AccountingSystem.Services/AccountingSystem.Services/AccountingSystem.Services.csproj
+++ b/AccountingSystem.Services/AccountingSystem.Services/AccountingSystem.Services.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AccountingSystem.Core\AccountingSystem.Core.csproj" />
+  </ItemGroup>
+
 
 </Project>
